--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               ><i class="fa fa-map-marker-alt me-2"></i>Gedung A300</small
             >
             <small class="me-3 text-light"
-              ><i class="fa fa-phone-alt me-2"></i>+012 345 6789</small
+              ><i class="fa fa-phone-alt me-2"></i></small
             >
           </div>
         </div>
@@ -151,7 +151,7 @@
           <div class="row justify-content-center py-5">
             <div class="col-lg-10 pt-lg-5 mt-lg-5 text-center">
               <h1 class="display-4 text-white mb-3 animated slideInDown">
-                Selamat Datang! <br> Insan Muda UNHAS
+                Selamat Datang! <br> Insan Muda UNHASS
               </h1>
               <p class="fs-5 text-white mb-4 animated slideInDown">
                 Pengumuman Penerimaan Mahasiswa Baru telah diumumkan. Silakan
@@ -195,7 +195,7 @@
             </h6>
             <h1 class="mb-4">Universitas Huhuhaha Asesmen</h1>
             <p class="mb-4">
-              UNHAS, atau Universitas Huhuhaha Asesmen, adalah sebuah perguruan
+              UNHASS, atau Universitas Huhuhaha Asesmen, adalah sebuah perguruan
               tinggi yang terkenal dengan suasana kampusnya yang ramah dan
               menyenangkan. Dengan berbagai fakultas ternama, UNHAS menawarkan
               pengalaman belajar yang tak terlupakan. Kampus ini tidak hanya
@@ -366,7 +366,7 @@
           <div class="row g-5 align-items-center">
             <div class="col text-white">
               <h6 class="text-white text-uppercase">Butuh Bantuan?</h6>
-              <h1 class="text-white mb-4">Kantak</h1>
+              <h1 class="text-white mb-4">Kontak</h1>
               <p class="mb-4">Jika ada kendala silakan hubungi kami</p>
               <a class="btn btn-outline-light py-3 px-5 mt-2"  href="https://wa.me/6282228211123?text=Halo%20Kak%20tanya%20dong" target="_blank"
                 >Hubungi</a
