--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
                   <li>Faza</li>
                   <li>Rifki</li>
                 </ul>
+                <p>Warna : Orange</p>
               </div>
             </div>
           </div>
@@ -246,6 +247,7 @@
                   <li>Mnk</li>
                   <li>Sumi</li>
                 </ul>
+                <p>Warna : Putih</p>
               </div>
             </div>
           </div>
@@ -262,6 +264,7 @@
                   <li>Nendra</li>
                   <li>Rizqa</li>
                 </ul>
+                <p>Warna : Biru</p>
               </div>
             </div>
           </div>
@@ -278,6 +281,7 @@
                   <li>Scm</li>
                   <li>Teguh</li>
                 </ul>
+                <p>Warna : Kuning</p>
               </div>
             </div>
           </div>
@@ -294,6 +298,7 @@
                   <li>Ptd</li>
                   <li>Sov</li>
                 </ul>
+                <p>Warna : Pink</p>
               </div>
             </div>
           </div>
@@ -309,6 +314,7 @@
                   <li>Yos</li>
                   <li>Zulfi</li>
                 </ul>
+                <p>Warna : Merah</p>
               </div>
             </div>
           </div>
@@ -325,6 +331,7 @@
                   <li>Ryan</li>
                   <li>Vro</li>
                 </ul>
+                <p>Warna : Hijau</p>
               </div>
             </div>
           </div>
@@ -341,6 +348,7 @@
                   <li>Retos</li>
                   <li>Winda</li>
                 </ul>
+                <p>Warna : Ungu</p>
               </div>
             </div>
           </div>
@@ -348,6 +356,29 @@
       </div>
     </div>
     <!-- Service End -->
+
+    <div class="container-xxl py-5">
+      <div class="container">
+        <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+          <h6 class="section-title bg-white text-center text-primary px-3">
+            Pengumuman
+          </h6>
+          <h1 class="mb-5">Ketentuan Kegiatan Penerimaan Mahasiswa Baru</h1>
+        </div>
+        <div class="row g-4">
+          <p>Dalam rangka penerimaan mahasiswa baru dan upaya membentuk mental mahasiswa berkualitas, seluruh mahasiswa baru <strong>UNHASS (Universitas Huhuhaha Asesmen)</strong> angkatan 2024 diharuskan untuk menghadiri:</p>
+          <h5>Orientasi Pengenalan Kampus dengan tema Passion, Tekad, dan Bakat </h5>
+          <p>Pelaksanaan pada hari Jumat, 27 September 2024 di ruang 300</p>
+          <div>Diharapkan setiap fakultas menggunakan dan mempersiapkan:
+            <ul>
+              <li>Pakaian berupa <strong>kemeja putih dan bawahan hitam</strong></li>
+              <li>Atribut berupa papan nama yang mencirikan masing-masing fakultas dengan ketentuan warna yang dapat dilihat di web.</li>
+              <li>Yel-yel Fakultas yang spektakuler</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Contact -->
     <div class="container-xxl pt-5">
