--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
     <!-- Service End -->
 
     <div class="container-xxl py-5">
-      <div class="container">
+      <div class="container p-3 rounded-lg" style="background-color: #fff;">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
           <h6 class="section-title bg-white text-center text-primary px-3">
             Pengumuman
@@ -428,7 +428,7 @@
                 class="position-relative d-flex justify-content-center"
                 style="margin-top: -19px"
               >
-                <a class="btn btn-square mx-1" href=""
+                <a class="btn btn-square mx-1" href="team-7.jpg"
                   ><i class="fab fa-instagram"></i
                 ></a>
               </div>
@@ -447,7 +447,7 @@
                 class="position-relative d-flex justify-content-center"
                 style="margin-top: -19px"
               >
-                <a class="btn btn-square mx-1" href=""
+                <a class="btn btn-square mx-1" href="team-6.jpg"
                   ><i class="fab fa-instagram"></i
                 ></a>
               </div>
