--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="team-item">
               <div class="overflow-hidden">
-                <img class="img-fluid" src="img/team-1.jpg" alt="team-7.jpg" />
+                <img class="img-fluid" src="team-7.jpg" alt="" />
               </div>
               <div
                 class="position-relative d-flex justify-content-center"
@@ -441,7 +441,7 @@
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="team-item">
               <div class="overflow-hidden">
-                <img class="img-fluid" src="img/team-6.jpg" alt="" />
+                <img class="img-fluid" src="team-6.jpg" alt="" />
               </div>
               <div
                 class="position-relative d-flex justify-content-center"
