--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       >
         <a href="" class="navbar-brand p-0">
           <h1 class="text-primary m-0">
-            UNHAS
+            UNHASS
           </h1>
           <!-- <img src="img/logo.png" alt="Logo"> -->
         </a>
@@ -358,7 +358,7 @@
     <!-- Service End -->
 
     <div class="container-xxl py-5">
-      <div class="container p-3 rounded-lg" style="background-color: #fff;">
+      <div class="container p-5 shadow" style="background-color: #fff; border-radius: 20px;">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
           <h6 class="section-title bg-white text-center text-primary px-3">
             Pengumuman
