--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
                   <li>Dini</li>
                   <li>Faza</li>
                   <li>Rifki</li>
+                  <li>Zulmi</li>
                 </ul>
                 <p>Warna : Orange</p>
               </div>
