--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="team-item">
               <div class="overflow-hidden">
-                <img class="img-fluid" src="team-7.jpg" alt="" />
+                <img class="img-fluid" src="team-8.jpg" alt="" />
               </div>
               <div
                 class="position-relative d-flex justify-content-center"
@@ -434,7 +434,7 @@
                 ></a>
               </div>
               <div class="text-center p-4">
-                <h5 class="mb-0">Galuh Putri Asrirani</h5>
+                <h5 class="mb-0">GALUH PUTRI ASRIRANI</h5>
                 <small>Rektor</small>
               </div>
             </div>
@@ -453,7 +453,7 @@
                 ></a>
               </div>
               <div class="text-center p-4">
-                <h5 class="mb-0">Riani Yulia</h5>
+                <h5 class="mb-0">RIANI YULIA</h5>
                 <small>Wakil Rektor</small>
               </div>
             </div>
@@ -474,7 +474,7 @@
                 ></a>
               </div>
               <div class="text-center p-4">
-                <h5 class="mb-0">Mia Nur</h5>
+                <h5 class="mb-0">MIA NURSUCIANA</h5>
                 <small>Ketua BEM</small>
               </div>
             </div>
@@ -493,7 +493,7 @@
                 ></a>
               </div>
               <div class="text-center p-4">
-                <h5 class="mb-0">Alya Salma</h5>
+                <h5 class="mb-0">ALYA SALMA KHONSA</h5>
                 <small>Komisi Disiplin</small>
               </div>
             </div>
@@ -512,7 +512,7 @@
                 ></a>
               </div>
               <div class="text-center p-4">
-                <h5 class="mb-0">Ade Rizqi</h5>
+                <h5 class="mb-0">ADE RISQI AMALLIA</h5>
                 <small>Mahasiswa Berprestasi</small>
               </div>
             </div>
@@ -531,7 +531,7 @@
                 ></a>
               </div>
               <div class="text-center p-4">
-                <h5 class="mb-0">Willy</h5>
+                <h5 class="mb-0">WILLY SETIAWAN</h5>
                 <small>Mahasiswa Berprestasi</small>
               </div>
             </div>
@@ -550,7 +550,7 @@
                 ></a>
               </div>
               <div class="text-center p-4">
-                <h5 class="mb-0">Okty Aji Pangestu</h5>
+                <h5 class="mb-0">OKTY AJI PANGESTU</h5>
                 <small>Humas</small>
               </div>
             </div>
